--- a/slides/index.html
+++ b/slides/index.html
@@ -39,7 +39,9 @@
   <div class="reveal">
     <div class="slides">
 <section data-state='notitle' class=" notitle"><h2 id="advanced-javascript">Advanced Javascript</h2>
-<p><img src="media/title.png"></p>
+<p><img src="media/ninja.png"></p>
+<div style="font-weight: 800;position: relative;font-size: 2em;float: left;left: 386px;top: -176px;">Sexy Javascript</div>
+<div>arturoazh@gmail.com</div>
 </section>
 
 <section  class=""><h2 id="today">Today</h2>
@@ -1683,8 +1685,7 @@ it(&quot;has a way of accessing lots&quot;,function() {
 </section>
 
 <section  class=""><h2 id="thanks-">Thanks!</h2>
-<p><a href="twitter.com/timruffles">@timruffles</a>
-<a href="twitter.com/sidekicksrc">@sidekicksrc</a></p>
+<p><a href="mailto:arturoazh@gmail.com">arturoazh@gmail.com</a>
 </section>
 
 </div>
