--- a/slides/index.html
+++ b/slides/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Advanced JS class</title>
   
+  <link rel="shortcut icon" type="image/ico" href="media/favicon.ico"/>
   <link rel="stylesheet" href="reveal/css/reveal.min.css">
   <link rel="stylesheet" href="reveal/lib/css/googlecode.css">
 
