--- a/slides/index.html
+++ b/slides/index.html
@@ -5,7 +5,7 @@
   <title>Advanced JS class</title>
   
   <link rel="shortcut icon" type="image/ico" href="media/favicon.ico"/>
-  <link rel="stylesheet" href="reveal/css/reveal.min.css">
+  <link rel="stylesheet" href="reveal/css/reveal.css">
   <link rel="stylesheet" href="reveal/lib/css/googlecode.css">
 
   <link rel="stylesheet" href="slides-theme/style.css">
