--- a/app_example/index.html
+++ b/app_example/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <section>
-	<span> [[ scope.valor1 ]] </span>
+	<span> [[ ejemplo.compile2 ]] </span>
 </section>
 <body>
 	<script src="js/core.js"></script>
@@ -18,93 +18,81 @@
 	</script>
 
 	<script>
-	// (function(){
-	// 	'use strict';
-	// 	var obj = {
-	// 		a:1,
-	// 		a:2,
+
+	console.log('AAAASSSSSSSSS', document.querySelector('section span'))
+
+	// var Utils = (function () {
+
+	// 	function Utils() {
+
 	// 	}
-	//
+
+	// 	Utils.prototype = {
+	// 		loadKey: function(){
+	// 				if(arguments[0] === undefined || arguments[1] === undefined){
+	// 						console.error("utils.loadKey ERROR: You need to provide two arguments utils.loadKey(keyRoute, scope)", arguments);
+	// 						return '';
+	// 				}
+	// 				var scope = arguments[1];
+	// 				var keyRoute = arguments[0];
+	// 				if(typeof arguments[0] == 'string'){
+	// 						var keyRoute = [arguments[0]];
+	// 						if(~arguments[0].indexOf('.')) keyRoute = arguments[0].split('.');
+	// 				}
+
+	// 				if(scope[keyRoute[0]] === undefined){
+	// 						console.error("Key "+keyRoute[0]+" is undefined in the object ", scope);
+	// 						return '';
+	// 				}else if(keyRoute.length === 1){
+	// 						return scope[keyRoute[0]];
+	// 				}else{
+	// 						scope = scope[keyRoute[0]];
+	// 						keyRoute.shift();
+	// 						return this.loadKey(keyRoute, scope);
+	// 				}
+	// 		},
+	// 		compile : function () {
+	// 			var str = arguments[0];
+	// 			var scope = arguments[1];
+
+	// 			console.log('asdfasdf', arguments);
+
+	// 			var parse = str.innerHTML.trim();
+
+	// 			var reg = /\[\[(.*?)\]\]/g;
+	// 			parse = reg.exec(parse)[1].trim();
+	// 			console.log(this.loadKey(parse, scope));
+	// 			str.innerHTML = this.loadKey(parse, scope);
+
+	// 		}
+	// 	}
+
+	// 	return Utils;
 	// }());
 
-	var Utils = (function () {
+	// const obj = {
+	// 	scope: {
+	// 		compile: 'Javascript Class'
+	// 	}
+	// }
 
-		function Utils() {
-
-		}
-
-		Utils.prototype = {
-			loadKey: function(){
-					if(arguments[0] === undefined || arguments[1] === undefined){
-							console.error("utils.loadKey ERROR: You need to provide two arguments utils.loadKey(keyRoute, scope)", arguments);
-							return '';
-					}
-					var scope = arguments[1];
-					var keyRoute = arguments[0];
-					if(typeof arguments[0] == 'string'){
-							var keyRoute = [arguments[0]];
-							if(~arguments[0].indexOf('.')) keyRoute = arguments[0].split('.');
-					}
-
-					if(scope[keyRoute[0]] === undefined){
-							console.error("Key "+keyRoute[0]+" is undefined in the object ", scope);
-							return '';
-					}else if(keyRoute.length === 1){
-							return scope[keyRoute[0]];
-					}else{
-							scope = scope[keyRoute[0]];
-							keyRoute.shift();
-							return this.loadKey(keyRoute, scope);
-					}
-			},
-			compile : function () {
-				var str = arguments[0];
-				var scope = arguments[1];
-
-				console.log(arguments);
-
-				var parse = str.innerHTML.trim();
-
-				var reg = /\[\[(.*?)\]\]/g;
-				parse = reg.exec(parse)[1].trim();
-				console.log(this.loadKey(parse, scope));
-				str.innerHTML = this.loadKey(parse, scope);
-
-			}
-		}
-
-		return Utils;
-	}());
-
-	var utils = new Utils();
-	var obj = {
-		scope: {
-			valor1: 'Javascript Class'
-		}
-	}
-	utils.compile(document.querySelector('section'), obj);
+	
+	// utils.compile(document.querySelector('section span'), obj);
 
 
+	// function comprobar(param1, param2) {
+	// 	var obj = {
+	// 		otroobj: {
+	// 			// fn : function () {
+	// 			// 	console.log('works');
+	// 			// }
+	// 		}
+	// 	}
+
+	// 	obj && obj.otroobj && obj.otroobj.fn && obj.otroobj.fn();
 
 
-
-
-
-
-
-	function comprobar(param1, param2) {
-		var obj = {
-			otroobj: {
-				// fn : function () {
-				// 	console.log('works');
-				// }
-			}
-		}
-
-		obj && obj.otroobj && obj.otroobj.fn && obj.otroobj.fn();
-
-
-	}
+	// }
 
 
 
